--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "backbone": "^1.4.0",
     "bootstrap": "^4.3.1",
+    "dotenv": "^8.1.0",
     "jquery": "^3.4.1",
     "underscore": "^1.9.1"
   }
